--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,18 @@
     <groupId>com.java.core</groupId>
     <artifactId>java-core</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <commons-lang3-version>3.11</commons-lang3-version>
+    </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3-version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
